# twistedWorm-Template

./: .gitignore  ARCHITECTURE.md  Cargo.toml  arc_eval.rs  contest.rs  demo_layers.rs  prime_directive.rs
benches/: mimicry_bench.rs
examples/: benchmarking.rs  gui_agent.rs  long_horizon_observation.rs  multi_model_consensus.rs  rl_enhanced_evolution.rs
src/: main.rs
src/mimicry/layers/: adaptive.rs  distribution_resonance.rs  emergence.rs  integration.rs  layer.rs  metrics.rs  mod.rs  octo_braid.rs  registry.rs  reserve.rs  stack.rs
src/mimicry/layers/bridges/: mod.rs  visualization_base.rs  visualization_collaborative.rs  visualization_consciousness.rs  visualization_external.rs
src/mimicry/layers/gaia/: intuition.rs
src/mimicry/layers/visualization/: engine.rs  fidelity.rs  mod.rs  projector.rs  simulator.rs
src/mimicry/octo/: mod.rs
tests/: gui_e2e.rs  layers_integration.rs
