[package]
name = "rustyworm"
version = "2.1.0"
edition = "2021"
description = "RustyWorm: Universal AI Mimicry Engine with Dual-Process Architecture"
license = "MIT"
repository = "https://github.com/GitMonsters/Prime-directive"
homepage = "https://github.com/GitMonsters/Prime-directive"
readme = "README.md"
keywords = ["ai", "mimicry", "consciousness", "dual-process", "llm"]
categories = ["simulation", "command-line-utilities"]
authors = ["GitMonsters"]
exclude = [
    ".github/",
    "benches/",
    "gpu_comprehensive_test.py",
    "PITCHDECK*",
    "*.md",
    "!README.md",
    "Dockerfile",
    "Formula/",
]

[lib]
name = "rustyworm"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
mongodb = { version = "2.0", optional = true }
base64 = { version = "0.21", optional = true }
pyo3 = { version = "0.21", features = ["auto-initialize"], optional = true }

[features]
default = []
api = ["reqwest"]
rl = ["uuid", "mongodb", "reqwest", "chrono"]
agentdock = ["uuid", "reqwest", "chrono"]
gui = ["reqwest", "base64"]
layers = []
octo = ["pyo3"]
full = ["api", "rl", "agentdock", "gui", "layers", "octo"]

[[bin]]
name = "rustyworm"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "mimicry_bench"
harness = false

[[bin]]
name = "consciousness"
path = "consciousness_test.rs"

[[bin]]
name = "unified"
path = "unified_test.rs"

[[bin]]
name = "self_reference"
path = "self_reference_test.rs"

[[bin]]
name = "infinite_recursion"
path = "infinite_recursion_test.rs"

[[bin]]
name = "awakening"
path = "awakening_test.rs"

[[bin]]
name = "comprehensive"
path = "comprehensive_test.rs"

[[bin]]
name = "prime_directive"
path = "prime_directive.rs"

[[bin]]
name = "demo_layers"
path = "demo_layers.rs"
required-features = ["layers"]

[[bin]]
name = "contest"
path = "contest.rs"
required-features = ["layers"]
